# flibc

./: ChangeLog  Makefile  Makefile.am  Makefile.old  README  configure.in  flc.pc.in  flct_test_str  flibc.pc.in
include/flc/: list.h  string.h
include/flibc/: dict.h  flibc.h  io.h  list.h  log.h  math.h  str.h  string.h  unit.h  vt102.h
src/: Makefile.am  io.c  log.c  str.c  string.c
tests/: Makefile.am  libtest.h  test_io.c  test_log.c  test_str.c
